2011-12-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-88
	* Table definitions and configuration load process have changed 
	  allowing up to 2048 characters parameter values.(bug 75950).
	  NOTE: Changes will be applied to HLT_Development in the next technical stop.
	  

2011-11-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-87
	* Documentation fields autosave when clicking the tree. (bug 75959).
	
2011-11-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-86
	* Improve documentation fields panel. (bug 75959).
	
2011-11-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-85
	* Change TEST2R host from int2r2-v.cern.ch to int2r1-v.cern.ch
	* Add first prototype panel for documentation fields. (bug 75959).
	* Add logic to show documentation fields when available in the db. (bug 75958).
	
2011-11-21 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-84
	* Show list of sequences containing the selected sequence in the
	  right lower panel. (bug 88620).

2011-11-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-83
	* Add errorNotification panel to present error details. (bug 88414).
	* Handle exceptions generated by broken configurations in load process. (bug 88414).
	* Add getConfDbVersion and getContactPerson methods in AboutDialog class
	  to be used when reporting errors.

2011-11-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-82
	* Add new tab in right lower panel with a list of sequences containing 
	  the selected module. (bug 88620).

2011-11-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-81
	* Save value of the parameter that is being edited when clicking 
	  the Configuration tree. (bug75952).

2011-11-03 Martin Grunewald <Martin.Grunewald@cern.ch>
	* tag V01-05-80
	* Allow direct renaming of Streams, incl. auto-update of OM label
